<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
   <string name="application_vimtouch">Vi IMproved Touch</string>
   <string name="preferences">Preferences</string>
   <string name="reset">Reset term</string>
   <string name="send_email">Email to</string>
   <string name="special_keys">Special keys</string>
   <string name="toggle_soft_keyboard">Toggle soft keyboard</string>

   <string name="edit_text">Edit text</string>
   <string name="select_text">Select text</string>
   <string name="copy_all">Copy all</string>
   <string name="paste">Paste</string>

   <!-- Preference dialog -->
   <string name="screen_preferences">Screen</string>

   <string name="title_statusbar_preference">Status bar</string>
   <string name="summary_statusbar_preference">Show/hide status bar.</string>
   <string name="dialog_title_statusbar_preference">Status bar</string>

   <string name="title_cursorstyle_preference">Cursor style</string>
   <string name="summary_cursorstyle_preference">Choose cursor style.</string>
   <string name="dialog_title_cursorstyle_preference">Cursor style</string>

   <string name="title_cursorblink_preference">Cursor blink</string>
   <string name="summary_cursorblink_preference">Choose cursor blink.</string>
   <string name="dialog_title_cursorblink_preference">Cursor blink</string>

   <string name="text_preferences">Text</string>

   <string name="title_fontsize_preference">Font size</string>
   <string name="summary_fontsize_preference">Choose character height in points.</string>
   <string name="dialog_title_fontsize_preference">Font size</string>

   <string name="title_color_preference">Colors</string>
   <string name="summary_color_preference">Choose text color.</string>
   <string name="dialog_title_color_preference">Text color</string>

   <string name="keyboard_preferences">Keyboard</string>
   <string name="title_controlkey_preference">Control key</string>
   <string name="summary_controlkey_preference">Choose control key.</string>
   <string name="dialog_title_controlkey_preference">Control key</string>

   <string name="title_ime_preference">Input method</string>
   <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
   <string name="dialog_title_ime_preference">Input method</string>

   <string name="shell_preferences">Shell</string>
   <string name="title_shell_preference">Command line</string>
   <string name="summary_shell_preference">Specify the shell command line.</string>
   <string name="dialog_title_shell_preference">Shell</string>

   <string name="title_initialcommand_preference">Initial command</string>
   <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
   <string name="dialog_title_initialcommand_preference">Initial Command</string>

   <!-- Don't localize these default values -->
   <string name="default_value_statusbar_preference">0</string>
   <string name="default_value_cursorstyle_preference">0</string>
   <string name="default_value_cursorblink_preference">0</string>
   <string name="default_value_fontsize_preference">10</string>
   <string name="default_value_color_preference">2</string>
   <string name="default_value_controlkey_preference">0</string>
   <string name="default_value_ime_preference">0</string>
   <string name="default_value_shell_preference">/system/bin/sh -</string>
   <string name="default_value_initialcommand_preference">export PATH=/data/local/bin:$PATH</string>
   
   <string name="normal_quick_buttons">Normal Mode Quick Buttons</string>
   <string name="default_normal_quick1">:w</string>
   <string name="title_normal_quick1">Normal mode 1st button</string>
   <string name="default_normal_quick2">dd</string>
   <string name="title_normal_quick2">Normal mode 2st button</string>
   <string name="default_normal_quick3">yy</string>
   <string name="title_normal_quick3">Normal mode 3st button</string>
   <string name="default_normal_quick4">p</string>
   <string name="title_normal_quick4">Normal mode 4st button</string>
   <string name="default_normal_quick5">:q!</string>
   <string name="title_normal_quick5">Normal mode 5st button</string>
   <string name="default_normal_quick6">:wq</string>
   <string name="title_normal_quick6">Normal mode 6st button</string>
   <string name="default_normal_quick7">G</string>
   <string name="title_normal_quick7">Normal mode 7st button</string>
   <string name="default_normal_quick8">zR</string>
   <string name="title_normal_quick8">Normal mode 8st button</string>
   <string name="default_normal_quick9">zM</string>
   <string name="title_normal_quick9">Normal mode 9st button</string>

   <string name="title_keyboard">key</string>
   <string name="title_esc">ESC</string>

   <string name="loading">VIM runtime is installing and may take around 5 mins to finish. Please wait...</string>
   
   <string name="dialog_title_content_error">Content Error</string>
   <string name="message_content_too_big">The content is too big to do preview. Please save it first.</string>

   <string name="vimrc">Edit vimrc</string>

   <string name="title_utf8_by_default_preference">Default to UTF-8</string>
   <string name="summary_utf8_by_default_preference">Whether UTF-8 mode is enabled by default.</string>

   <string name="title_backaction_preference">Back button behavior</string>
   <string name="summary_backaction_preference">Choose what pressing the back button does.</string>
   <string name="dialog_title_backaction_preference">Back button behavior</string>

   <string name="title_fnkey_preference">Fn key</string>
   <string name="summary_fnkey_preference">Choose Fn key.</string>
   <string name="dialog_title_fnkey_preference">Fn key</string>

   <string name="title_ime_preference">Input method</string>
   <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
   <string name="dialog_title_ime_preference">Input method</string>

   <string name="vim_preferences">Vim</string>
   <string name="title_touch_gesture_preference">Touch Gesture</string>
   <string name="summary_touch_gesture_preference">Whether touch gestures is enabled.</string>

   <string name="title_single_tap_esc_preference">Single Tap send ESC</string>
   <string name="summary_single_tap_esc_preference">Whether single tap to send ESC key is enabled.</string>

   <string name="title_zoombottom_preference">Zoom Bottom Text</string>
   <string name="summary_zoombottom_preference">Whether zoom bottom text is enabled.</string>

   <string name="open_file">Open File</string>
   <string name="esc_key">ESC</string>
   <string name="more_key">Toggle Quick Keys</string>
   <string name="save_file">Save</string>
   <string name="quit_file">:q!</string>
   <string name="toggle_fullscreen">Toggle Fullscreen</string>

   <string name="title_quickbar_pos_preference">Quickbar Position</string>
   <string name="summary_quickbar_pos_preference">Choose position of quickbar</string>
   <string name="dialog_title_quickbar_pos_preference">Quickbar Position</string>


</resources>
